# dragon-run

./: .gitignore  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  build.gradle  gradle.properties  gradlew  ogplan.md  settings.gradle  spec.md
director/: .env  DASHBOARD.md  IMPLEMENTATION.md  README.md  SETUP.md  agent.py  commentary_engine.py  config.yaml  dashboard.py  database_tools.py  intervention_engine.py  langgraph.json  main.py  mainold.py  opencode.json  proactive_engine.py  pyproject.toml  requirements.txt  state_manager.py  test_director_websocket.py  tools.py  websocket_client.py
director/migrations/: 002_eris_persona_state.sql
director/old/: main.py  pyproject.toml  state_manager.py
director/scenarios/: README.md
director/scenarios/emergent/: devils_hoard.yaml  lovers_separation.yaml  tower_collapse.yaml
director/scripts/: generate_scenarios.py  run.py  run_scenario.py  score_runs.py  test_scenarios.py
director/src/eris/: __init__.py  application.py  config.py
director/src/eris/core/: __init__.py  causality.py  database.py  eris_memory.py  event_processor.py  memory.py  tarot.py  tarot_integration.py  tension.py  tracing.py  websocket.py
director/src/eris/graph/: __init__.py  builder.py  edges.py  nodes.py  state.py
director/src/eris/persona/: __init__.py  debt.py  karma.py  masks.py  prompts.py
director/src/eris/tools/: __init__.py  game_tools.py  schemas.py
director/src/eris/validation/: __init__.py  advancement_graph.py  intent_compiler.py  intents.py  leaderboard.py  player_memory.py  player_state.py  scenario_factory.py  scenario_generator.py  scenario_loader.py  scenario_runner.py  scenario_schema.py  scenario_validator.py  scoring.py  sim_world_service.py  synthetic_client.py  synthetic_event_processor.py  synthetic_world.py  tarot.py  tarot_brains.py  world_diff.py
director/src/eris_director.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
director/tests/: __init__.py  test_advancement_graph.py  test_scenario_factory.py  test_scenario_runner.py  test_scoring.py  test_synthetic_world.py  test_tarot.py
scenarios/: 01_simple_trio.yaml  02_nether_disaster.yaml  03_eris_chaos.yaml  04_invalid_progression.yaml
scripts/: start-server.bat  start-server.sh
src/main/java/com/dragonrun/: DragonRunPlugin.java
src/main/java/com/dragonrun/commands/: AchievementsCommand.java  AuraCommand.java  BetCommand.java  LiveCommand.java  NicknameCommand.java  StatsCommand.java  VoteCommand.java
src/main/java/com/dragonrun/database/: Database.java  DatabaseConfig.java
src/main/java/com/dragonrun/database/models/: PlayerData.java  RunHistory.java
src/main/java/com/dragonrun/director/: DirectorCommandExecutor.java  DirectorCommands.java
src/main/java/com/dragonrun/listeners/: AchievementListener.java  DamageListener.java  DeathListener.java  DirectorChatListener.java  EntityInteractionListener.java  InventoryListener.java  JoinListener.java  LobbyProtectionListener.java  MinecraftAdvancementListener.java  MobKillListener.java  PortalDebugListener.java  ResourceMilestoneListener.java  StructureDiscoveryListener.java  VehicleListener.java
src/main/java/com/dragonrun/managers/: AchievementManager.java  AuraManager.java  BettingManager.java  ErisCausalityManager.java  GameState.java  PortalManager.java  RunManager.java  ScoreboardManager.java  VoteManager.java  WorldManager.java
src/main/java/com/dragonrun/util/: MessageUtil.java  TimeUtil.java
src/main/java/com/dragonrun/websocket/: DirectorWebSocketServer.java
src/main/java/com/dragonrun/websocket/models/: GameSnapshot.java  PlayerStateSnapshot.java
src/main/resources/: config.yml  paper-plugin.yml  schema.sql
src/main/resources/migrations/: 001_add_world_columns.sql
testserver/: .console_history  bukkit.yml  spigot.yml  start-server.bat
testserver/crash-reports/: crash-2025-12-16_19.21.47-server.txt
testserver/plugins/.paper-remapped/: index.json
testserver/plugins/bStats/: config.yml
