[project]
name = "eris-director"
version = "2.0.0"
description = "Eris AI Director - Chaos incarnate for Dragon Run hardcore Minecraft"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.1.70",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "websockets>=12.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=14.2.0",
    "executing>=2.2.1",
    "logfire>=4.16.0",
    "opentelemetry-instrumentation>=0.60b1",
    "pydantic-settings>=2.12.0",
    "wrapt>=1.17.3",
    "opentelemetry-instrumentation-asyncpg>=0.60b1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module level import not at top (intentional for tracing init)
    "E741",   # ambiguous variable name (l is fine in list comprehensions)
    "B008",   # do not perform function calls in argument defaults (common in FastAPI/Pydantic)
    "ARG001", # unused function argument (common in LangGraph node signatures)
    "ARG002", # unused method argument (common in overrides)
    "RUF012", # mutable class attributes (intentional for constants)
    "RUF059", # unused unpacked variable (intentional in asyncio.wait)
    "SIM102", # nested if (clearer than combined sometimes)
    "SIM103", # return bool directly (explicit is clearer)
    "SIM105", # contextlib.suppress (try/except is clearer)
    "PTH123", # Path.open() (open() is fine)
    "N806",   # uppercase variable in function (intentional for constants)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py are often intentional

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
