[project]
name = "director"
version = "0.1.0"
description = "Dragon Run AI Director - Provides commentary and interventions for the hardcore Minecraft roguelike"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "websockets>=12.0",
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.1",
    "rich>=14.2.0",
]
